Bug 274797 - Columns change width when switching between adapters and main overview
Summary: Columns change width when switching between adapters and main overview
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-03 00:37 UTC by Kai Uwe Broulik
Modified: 2011-06-07 19:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Columns change width which causes lags and ugly repaints (661.48 KB, video/ogg)
2011-06-04 02:46 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-06-03 00:37:56 UTC
Version:           unspecified (using KDE 4.6.3) 
OS:                Linux

The bug you fixed a few days ago concerning the text wrapping and russian locale thing (don’t find it atm) introduced a new regression that now the columns change width all the time again.
You click on a Wireless adapter, the left pane gets tinier, you go back the left pane gets unneccessarily big again (textwrap is 50 pixels away from the separator), then you click an adapter that has no connections in the list, then the right list gets really small …
And since Plasma is really really slow and laggy when it comes to format/size changes especially if scroll bars are involved, the layout should never change!

Reproducible: Always
Comment 1 Lamarque V. Souza 2011-06-04 02:35:34 UTC
Please attach screenshots or screencast showing the problem. It is easier to find what is wrong by looking at the problem.
Comment 2 Kai Uwe Broulik 2011-06-04 02:46:47 UTC
Created attachment 60596 [details]
Columns change width which causes lags and ugly repaints

Please ignore the flickering which seems to be an issue with recordmydesktop.
The issue shown here: When clicking an adapter (was too lazy to show on notebook where I have WiFi as well) the columns change width which causes lags. When switching back to the overview, the left column again increases in width which also causes laggy repaints and brief appearance of the scroll bar container widget.
Comment 3 Lamarque V. Souza 2011-06-04 04:45:14 UTC
I am afraid there is no solution for this problem. Everytime we tried to fix widget's width one or more bugs appear, so I changed Plasma NM to let Qt's graphics layout change the width at will, which is causing this effect.

If we fix the right widget's width the back button in interface details can stop working sometimes or the increasing width bug you reported sometime ago can reappear.
Comment 4 Lamarque V. Souza 2011-06-07 07:30:10 UTC
Git commit 3562b8423f666ca0021dff5c9c18d9cf8566b883 by Lamarque V. Souza.
Committed on 07/06/2011 at 07:28.
Pushed by lvsouza into branch 'master'.

Set right widget's width to fixed size.

BUG: 274797
(cherry picked from commit 1dc55234bcd4d020043eafc25ad052c54bff7787)

M  +1    -0    applet/nmpopup.cpp     

http://commits.kde.org/networkmanagement/3562b8423f666ca0021dff5c9c18d9cf8566b883
Comment 5 Kai Uwe Broulik 2011-06-07 19:37:50 UTC
Thanks! :) That fixed that annoying brief popping up of the scroll bar widget which caused lags. Now the transition is smoooooooooooooooth ;)