Set right widget's width to fixed size.

BUG: 274797